@@ -29,6 +29,7 @@ import org.jabref.model.entry.field.OrFields;
 import org.jabref.model.util.Range;
 
 import io.github.adr.linked.ADR;
+import org.jooq.lambda.Unchecked;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -141,8 +142,7 @@ public class BibEntryWriter {
 
     private void writeEntryType(BibEntry entry, BibWriter out, BibDatabaseMode bibDatabaseMode) throws IOException {
         int start = out.getCurrentPosition();
-        TypedBibEntry typedEntry = new TypedBibEntry(entry, bibDatabaseMode);
-        out.write('@' + typedEntry.getTypeForDisplay());
+        out.write('@' + entry.getType().getDisplayName());
         int end = out.getCurrentPosition();
         fieldPositions.put(InternalField.TYPE_HEADER, new Range(start, end));
         out.write("{");
@@ -164,22 +164,24 @@ public class BibEntryWriter {
     /// @param field the field
     /// @throws IOException In case of an IO error
     private void writeField(BibEntry entry, BibWriter out, Field field, int indent) throws IOException {
-        Optional<String> value = entry.getField(field);
-        // only write field if it is not empty
-        // field.ifPresent does not work as an IOException may be thrown
-        if (value.isPresent() && !value.get().trim().isEmpty()) {
-            out.write("  ");
-            out.write(getFormattedFieldName(field, indent));
-            try {
-                int start = out.getCurrentPosition();
-                out.write(fieldWriter.write(field, value.get()));
-                int end = out.getCurrentPosition();
-                fieldPositions.put(field, new Range(start, end));
-            } catch (InvalidFieldValueException ex) {
-                LOGGER.warn("Invalid field value {} of field {} of entry {}", value.get(), field, entry.getCitationKey().orElse(""), ex);
-                throw new IOException("Error in field '" + field + " of entry " + entry.getCitationKey().orElse("") + "': " + ex.getMessage(), ex);
+        try {
+            entry.getField(field)
+                 .filter(value -> !value.isBlank())
+                 .ifPresent(Unchecked.consumer(value -> {
+                     out.write("  ");
+                     out.write(getFormattedFieldName(field, indent));
+                     int start = out.getCurrentPosition();
+                     out.write(fieldWriter.write(field, value));
+                     int end = out.getCurrentPosition();
+                     fieldPositions.put(field, new Range(start, end));
+                     out.writeLine(",");
+                 }));
+        } catch (RuntimeException e) {
+            // Unchecked.consumer wraps a thrown IOException into a RuntimeException; unwrap and rethrow it
+            if (e.getCause() instanceof IOException ioException) {
+                throw ioException;
             }
-            out.writeLine(",");
+            throw e;
         }
     }
 
@@ -200,7 +202,7 @@ public class BibEntryWriter {
     @ADR(49)
     static String getFormattedFieldName(Field field, int indent) {
         String fieldName = field.getName();
-        return fieldName + StringUtil.repeatSpaces(indent - fieldName.length()) + " = ";
+        return fieldName + " ".repeat(Math.max(0, indent - fieldName.length())) + " = ";
     }
 
     public Map<Field, Range> getFieldPositions() {
